--- a/index.html
+++ b/index.html
@@ -1,46 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leader-board CSS3</title>
+    <title>Leader-board</title>
+    <!-- stylesheets -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <!-- header start -->
-    <header></header>
-    <!-- header end -->
-    <!-- top players and top blog -->
+    <header>
+
+    </header>
     <main>
-        <section>
+        <!-- top players and blogs -->
+        <section class="container">
             <div class="top-players">
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>player-1</h3>
+                <h2 class="section-title">Top players</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h2 class="player-name">player-1</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h2 class="player-name">player-2</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h2 class="player-name">player-3</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h2 class="player-name">player-4</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h2 class="player-name">player-5</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h2 class="player-name">player-6</h2>
+                    </div>
                 </div>
-                <div class="player">
-                    <img src="images/players/player-2.png" alt="">
-                    <h3>player-2</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-3.png" alt="">
-                    <h3>player-3</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-4.png" alt="">
-                    <h3>player-4</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-5.png" alt="">
-                    <h3>player-5</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-6.png" alt="">
-                    <h3>player-6</h3>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                 13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                 13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                 13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                 13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
+        <!-- latest courses -->
+        <section class="container">
+            
+        </section>
     </main>
 </body>
+
 </html>
